projects/compiler/test/typechecker/identifier/error_type_mismatch.out
Error at %FILE_NAME%:3:10
Type mismatch
  |  val b = !a
              ^
Expected: Bool
but instead found: Int
